Adding Resume && Social media links

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <div class="nav-container">
                 <a href="#">Home</a>
                 <a href="#">Services</a>
-                <a href="#">Skills</a>
+                <a href="https://docs.google.com/document/d/1J_6Y-e76c69H1I3okFz5fDsdZG5Reb7ga6uSYDMw9Q0/edit?usp=sharing">Resume</a>
                 <a href="#">Education</a>
                 <a href="#">Experience</a>
-                <a href="#">Gallery</a>
+                <a href="Gallery/gallery.html">Gallery</a>
                 <a href="#">Contact</a>
             </div>
         </nav>
@@ -49,13 +49,16 @@
                 <a href="http://www.facebook.com/moi.nulislam07/" target="_blank">
                     <i class="fa-brands fa-facebook fb"></i>
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://x.com/moinulislam_07" target="_blank">
                     <i class="fa-brands fa-twitter twitter"></i>
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://www.linkedin.com/in/moinul-islam-6ab888290/" target="_blank">
                     <i class="fa-brands fa-linkedin-in linked-in"></i>
                 </a>
-                <a href="#" target="_blank">
+                <a href="mailto:moinulislam159632@gmail.com" target="_blank">
+                    <i class="fa-regular fa-envelope email"></i>
+                </a>
+                <a href="https://github.com/moinul07" target="_blank">
                     <i class="fa-brands fa-github github"></i>
                 </a>
                 
@@ -63,6 +66,8 @@
         </div>
     </main>
 
-    <footer></footer>
+    <footer>
+        <a href="#" class="foot-logo" target="_blank" title="Go to top">Moinul</a>
+    </footer>
 </body>
 </html>
