Commented the footer

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </div>
     </main>
 
-    <footer>
+    <!-- <footer>
         <a href="#" class="foot-logo" target="_blank" title="Go to top">Moinul</a>
-    </footer>
+    </footer> -->
 </body>
 </html>
