--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="nav-container">
                 <a href="#">Home</a>
                 <a href="#">Services</a>
-                <a href="https://docs.google.com/document/d/1J_6Y-e76c69H1I3okFz5fDsdZG5Reb7ga6uSYDMw9Q0/edit?usp=sharing">Resume</a>
+                <a href="https://docs.google.com/document/d/1UPwS0OFDhGxgTEQTkJEZbYcmiLjLDOYH/edit#heading=h.gjdgxs">Resume</a>
                 <a href="#">Experience</a>
                 <a href="Gallery/gallery.html">Gallery</a>
                 <a href="#">Contact</a>
@@ -34,7 +34,7 @@
 
     <main>
         <div class="hero">
-            <img src="img/i.png" alt="" class="hero-img">
+            <img src="img/img.jpg" alt="" class="hero-img">
 
             <div class="hero-container">
                 Hi there! It's <p>Moinul</p><br>
@@ -45,7 +45,7 @@
                 <button>Hire me</button>
             </div>
             <aside>
-                <a href="http://www.facebook.com/moi.nulislam07/" target="_blank">
+                <a href="http://www.facebook.com/moinulislam07/" target="_blank">
                     <i class="fa-brands fa-facebook fb"></i>
                 </a>
                 <a href="https://x.com/moinulislam_07" target="_blank">
