--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href="mailto:moinulislam159632@gmail.com" target="_blank">
                     <i class="fa-regular fa-envelope email"></i>
                 </a>
-                <a href="https://github.com/moinul07" target="_blank">
+                <a href="https://github.com/moi-nulislam" target="_blank">
                     <i class="fa-brands fa-github github"></i>
                 </a>
                 
