--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
+    <link rel="stylesheet" href="gallery.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul class="sidebar">
+                <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="https://docs.google.com/document/d/1UPwS0OFDhGxgTEQTkJEZbYcmiLjLDOYH/edit#heading=h.gjdgxs">Resume</a></li>
+                <li><a href="#">Experience</a></li>
+                <li><a href="Gallery/gallery.html">Gallery</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+
+            <ul>
+                <li><a href="#">Moinul</a></li>
+                <li class="hideOnMobile"><a href="#" >Home</a></li>
+                <li class="hideOnMobile"><a href="#">Services</a></li>
+                <li class="hideOnMobile"><a href="https://docs.google.com/document/d/1UPwS0OFDhGxgTEQTkJEZbYcmiLjLDOYH/edit#heading=h.gjdgxs">Resume</a></li>
+                <li class="hideOnMobile"><a href="#">Experience</a></li>
+                <li class="hideOnMobile"><a href="Gallery/gallery.html" class="active">Gallery</a></li>
+                <li class="hideOnMobile"><a href="#">Contact</a></li>
+                <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+            </ul>
+        </nav>
+    </header>
+    <script src="gallery.js"></script>
 </body>
 </html>
