--- a/index.html
+++ b/index.html
@@ -17,28 +17,36 @@
 <body>
     <header>
         <nav>
-            <div class="logo-container">
-                <a href="#" class="nav-logo">Moinul</a>
-            </div>
+            <ul class="sidebar">
+                <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+                <li><a href="#" class="active"Home</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="https://docs.google.com/document/d/1UPwS0OFDhGxgTEQTkJEZbYcmiLjLDOYH/edit#heading=h.gjdgxs">Resume</a></li>
+                <li><a href="#">Experience</a></li>
+                <li><a href="Gallery/gallery.html">Gallery</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
 
-            <div class="nav-container">
-                <a href="#">Home</a>
-                <a href="#">Services</a>
-                <a href="https://docs.google.com/document/d/1UPwS0OFDhGxgTEQTkJEZbYcmiLjLDOYH/edit#heading=h.gjdgxs">Resume</a>
-                <a href="#">Experience</a>
-                <a href="Gallery/gallery.html">Gallery</a>
-                <a href="#">Contact</a>
-            </div>
+            <ul>
+                <li><a href="#">Moinul</a></li>
+                <li class="hideOnMobile"><a href="#" class="active">Home</a></li>
+                <li class="hideOnMobile"><a href="#">Services</a></li>
+                <li class="hideOnMobile"><a href="https://docs.google.com/document/d/1UPwS0OFDhGxgTEQTkJEZbYcmiLjLDOYH/edit#heading=h.gjdgxs">Resume</a></li>
+                <li class="hideOnMobile"><a href="#">Experience</a></li>
+                <li class="hideOnMobile"><a href="Gallery/gallery.html">Gallery</a></li>
+                <li class="hideOnMobile"><a href="#">Contact</a></li>
+                <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
         <div class="hero">
-            <img src="img/img.jpg" alt="" class="hero-img">
+            <img src="img/hero-img.jpg" alt="" class="hero-img">
 
             <div class="hero-container">
                 Hi there! It's <p>Moinul</p><br>
-                I am a <p style="color: rgb(0, 255, 0); font-size: 50px;">software engineer</p><br>
+                I am a <p style="font-size: 50px;">software engineer</p><br>
                 <div id="description">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quae, nam quia pariatur molestiae deleniti odio placeat, repellat amet qui mollitia asperiores blanditiis ipsam tempora autem expedita libero assumenda commodi! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora labore ratione minus voluptas a suscipit error quo nihil molestias! Illum minus, praesentium quod incidunt quaerat nisi aliquid facilis hic impedit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, magni error? Assumenda, cum iste rem amet nulla magni provident numquam porro soluta molestias quam eaque fuga alias iure dolores quasi.
                 </div>
@@ -68,5 +76,7 @@
     <!-- <footer>
         <a href="#" class="foot-logo" target="_blank" title="Go to top">Moinul</a>
     </footer> -->
+
+    <script src="script.js"></script>
 </body>
 </html>
