--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul class="sidebar">
                 <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-                <li><a href="#" class="active"Home</a></li>
+                <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="https://docs.google.com/document/d/1UPwS0OFDhGxgTEQTkJEZbYcmiLjLDOYH/edit#heading=h.gjdgxs">Resume</a></li>
                 <li><a href="#">Experience</a></li>
