Added path from Gallery to home by '../'

--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -11,17 +11,17 @@
         <nav>
             <ul class="sidebar">
                 <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-                <li><a href="#" class="active">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="https://docs.google.com/document/d/1UPwS0OFDhGxgTEQTkJEZbYcmiLjLDOYH/edit#heading=h.gjdgxs">Resume</a></li>
                 <li><a href="#">Experience</a></li>
-                <li><a href="Gallery/gallery.html">Gallery</a></li>
+                <li><a href="Gallery/gallery.html" class="active">Gallery</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
 
             <ul>
                 <li><a href="#">Moinul</a></li>
-                <li class="hideOnMobile"><a href="#" >Home</a></li>
+                <li class="hideOnMobile"><a href="../index.html" >Home</a></li>
                 <li class="hideOnMobile"><a href="#">Services</a></li>
                 <li class="hideOnMobile"><a href="https://docs.google.com/document/d/1UPwS0OFDhGxgTEQTkJEZbYcmiLjLDOYH/edit#heading=h.gjdgxs">Resume</a></li>
                 <li class="hideOnMobile"><a href="#">Experience</a></li>
@@ -31,6 +31,12 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+
+    </main>
+
+    
     <script src="gallery.js"></script>
 </body>
 </html>
