--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -20,7 +20,7 @@
             </ul>
 
             <ul>
-                <li><a href="#">Moinul</a></li>
+                <li><a href="../index.html" id="nav-logo"><img src="../img/logo.jpg" alt="logo"></a></li>
                 <li class="hideOnMobile"><a href="../index.html" >Home</a></li>
                 <li class="hideOnMobile"><a href="#">Services</a></li>
                 <li class="hideOnMobile"><a href="https://docs.google.com/document/d/1UPwS0OFDhGxgTEQTkJEZbYcmiLjLDOYH/edit#heading=h.gjdgxs">Resume</a></li>
