--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <img src="img/hero-img.jpg" alt="" class="hero-img">
 
             <div class="hero-container">
-                Hi there! It's <p>Moinul</p><br>
-                I am a <p style="font-size: 50px;">software engineer</p><br>
+                Hi there! It's <p><b>Moinul</b></p><br>
+                I am a <p><b>software engineer</b></p><br>
                 <div id="description">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quae, nam quia pariatur molestiae deleniti odio placeat, repellat amet qui mollitia asperiores blanditiis ipsam tempora autem expedita libero assumenda commodi! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora labore ratione minus voluptas a suscipit error quo nihil molestias! Illum minus, praesentium quod incidunt quaerat nisi aliquid facilis hic impedit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, magni error? Assumenda, cum iste rem amet nulla magni provident numquam porro soluta molestias quam eaque fuga alias iure dolores quasi.
                 </div>
@@ -57,7 +57,7 @@
                     <i class="fa-brands fa-facebook fb"></i>
                 </a>
                 <a href="https://x.com/moinulislam_07" target="_blank">
-                    <i class="fa-brands fa-twitter twitter"></i>
+                    <i class="fa-brands fa-x-twitter twitter"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/moinul-islam-6ab888290/" target="_blank">
                     <i class="fa-brands fa-linkedin-in linked-in"></i>
