Added Contact page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="https://docs.google.com/document/d/1UPwS0OFDhGxgTEQTkJEZbYcmiLjLDOYH/edit#heading=h.gjdgxs">Resume</a></li>
                 <li><a href="#">Experience</a></li>
                 <li><a href="Gallery/gallery.html">Gallery</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact/contact.html">Contact</a></li>
             </ul>
 
             <ul>
@@ -34,7 +34,7 @@
                 <li class="hideOnMobile"><a href="https://docs.google.com/document/d/1UPwS0OFDhGxgTEQTkJEZbYcmiLjLDOYH/edit#heading=h.gjdgxs">Resume</a></li>
                 <li class="hideOnMobile"><a href="#">Experience</a></li>
                 <li class="hideOnMobile"><a href="Gallery/gallery.html">Gallery</a></li>
-                <li class="hideOnMobile"><a href="#">Contact</a></li>
+                <li class="hideOnMobile"><a href="contact/contact.html">Contact</a></li>
                 <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
             </ul>
         </nav>
