Added pics of sani and naat and kalima

--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -34,6 +34,51 @@
     </header>
 
     <main>
+        <div class="naat">
+            <pre>
+    صَلُّوا عَلٰی سَیِّدِنَا صَلَّی اللّٰہُ عَلَیْہِ وَسَلَّم
+    صَلُّوا عَلٰی سَیِّدِنَا صَلَّی اللّٰہُ عَلَیْہِ وَسَلَّم
+
+    ہاں یہ بات سچ ہے حقیقت یہی ہے
+    نبی ﷺ آپ کو میں نے دیکھا نہیں ہے
+
+    نہ دورِ محمد ﷺ میں پیدا ہوا میں
+    نہ ساتھی سفر کا کبھی بن سکا میں
+    نہ آقا ﷺ کی آواز تک سن سکا میں
+    نہ غزوہ میں مشرکوں سے لڑا میں
+
+    نہ ہجرت کی لذت ہوئی مجھ کو حاصل
+    نہ ہو پایا انصار کی صف میں شامل
+    نبی آپ جس دم تھے غارِ حرا میں
+    کوئی زادِ راہ بھی نہ پہنچا سکا میں
+
+    نبی آپ جس دم تھے ثور و حرا میں
+    کوئی زادِ راہ بھی نہ پہنچا سکا میں
+    مگر سچ ہے یہ بھی قسم ہے خدا کی
+    محبت مجھے آپ سے ہے نبی جی ﷺ
+
+    صَلُّوا عَلٰی سَیِّدِنَا صَلَّی اللّٰہُ عَلَیْہِ وَسَلَّم
+    صَلُّوا عَلٰی سَیِّدِنَا صَلَّی اللّٰہُ عَلَیْہِ وَسَلَّم
+
+    نہ ابوبکر سا میں رفیقِ سفر ہوں
+    نہ عثمانؓ و حیدرؓ نہ میں عمرؓ ہوں
+    نہ طلحہؓ نہ حمزہؓ نہ سعید و سعدؓ ہوں
+    انسؓ جیسا خادم نہ خالدؓ اسد ہوں
+
+    نہ میں ابنِ عوفؓ و زبیرؓ و عبیدہؓ
+    نہ میں ابو دجانہؓ، معاذؓ و قتادہؓ
+    نہ اَرقمؓ نہ اَخنسؓ بلالؓ اور یحییٰؓ
+    نہ مثلِ یاسرؓ اور یاسرؓ نہ یَعلیٰؓ
+
+    میں ان سب کے قدموں کی ذروں کا ذرّہ
+    مگر اے نبی ﷺ آپ کا ہوں میں شیدا
+
+    صَلُّوا عَلٰی سَیِّدِنَا صَلَّی اللّٰہُ عَلَیْہِ وَسَلَّم
+    صَلُّوا عَلٰی سَیِّدِنَا صَلَّی اللّٰہُ عَلَیْہِ وَسَلَّم
+            </pre>
+
+            <p>لا إله إلا الله</p>
+        </div>
 
     </main>
 
